test/TestPhases/importchecking/invalid/importProgram.blc
import p "../imports/program"

@[EntryPoint]
activity Main ()
    run p.AnAct()
    await true
end